--- a/arch/arm/mach-uniphier/Kconfig
+++ b/arch/arm/mach-uniphier/Kconfig
@@ -6,7 +6,7 @@ config ARCH_UNIPHIER
 	select ARM_GLOBAL_TIMER
 	select ARM_GIC
 	select HAVE_ARM_SCU
-	select HAVE_ARM_TWD if SMP
+	select HAVE_ARM_TWD
 	select PINCTRL
 	help
 	  Support for UniPhier SoC family developed by Socionext Inc.
