--- a/arch/arm/boot/dts/uniphier-pro4.dtsi
+++ b/arch/arm/boot/dts/uniphier-pro4.dtsi
@@ -395,6 +395,56 @@
 			};
 		};
 
+		usbphy: usbphy@5f800500 {
+			#phy-cells = <0>;
+			compatible = "socionext,ph1-pro4-usbphy";
+			reg = <0x5f800500 0x20>;
+		};
+
+		usb0: usb@65b00000 {
+			compatible = "socionext,uniphier-pro4-dwc3";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_usb0>;
+			reg = <0x65b00000 0x1000>;
+			clocks = <&sys_clk 12>, <&sys_clk 16>;
+			clock-names = "u3clk0", "u3clk1";
+			phys = <&usbphy>;
+			phy-names = "usb";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			vbus-supply;
+			ranges;
+			dwc3@65a00000 {
+				compatible = "snps,dwc3";
+				reg = <0x65a00000 0x14100>;
+				interrupts = <0 134 4>;
+				dr_mode = "host";
+				tx-fifo-resize;
+			};
+		};
+
+		usb1: usb@65d00000 {
+			compatible = "socionext,uniphier-pro4-dwc3";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_usb1>;
+			reg = <0x65d00000 0x1000>;
+			clocks = <&sys_clk 12>, <&sys_clk 17>;
+			clock-names = "u3clk0", "u3clk1";
+			phys = <&usbphy>;
+			phy-names = "usb";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			vbus-supply;
+			ranges;
+			dwc3@65c00000 {
+				compatible = "snps,dwc3";
+				reg = <0x65c00000 0x14100>;
+				interrupts = <0 137 4>;
+				dr_mode = "host";
+				tx-fifo-resize;
+			};
+		};
+
 		nand: nand@68000000 {
 			compatible = "denali,denali-nand-uniphier-v5a";
 			status = "disabled";
